infrastructure/kubernetes/cluster/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: next-server
  namespace: default
spec:
  selector:
    app: next-server
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  ports:
  - name: next-server
    protocol: TCP
    port: 3000
    targetPort: 3000
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  next-server
  namespace: default
  labels:
    app:  next-server
spec:
  selector:
    matchLabels:
      app: next-server
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  next-server
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  next-server
        image: ghcr.io/apollo-xiv/k8s-frontend:latest
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort:  3000
          name:  next-server
      restartPolicy: Always
